[project]
name = "repl-nix-racingtothebank"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.2",
    "openai>=1.52.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-dotenv",
    "reportlab>=4.2.5",
    "requests>=1.0.1",
    "scikit-learn>=1.5.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.39.0",
    "xgboost>=2.1.2",
]
